2004-04-01  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/dialog-scheduledxaction.c: Move variable declaration
	  to the top of the block.

2004-03-31  Derek Atkins  <derek@ihtfp.com>

	* configure.in: move m4/Makefile to its own line
	* macros/autogen.sh: add code to remove "intl/Makefile po/Makefile"
	  from AC_OUTPUT in configure.in prior to calling gettextize
	  to make sure that you can build from CVS with recent versions
	  of gettextize.  Tested with both RH9 and RH7.3 to make sure
	  it works with both old and new.  Fixes #120206.

	* accounts/hu_HU/Makefile.am: don't include files in the DIST that
	  we don't have in CVS.

2004-03-30  Derek Atkins  <derek@ihtfp.com>

	* src/report/report-system/report-system.scm:
	* src/report/utility-reports/iframe-url.scm:
	  don't need to require format; main.scm handles it, and
	  the default "format" (simple-format) is sufficient to
	  handle everything we need.  This allows gnucash to work
	  with slib3.

2004-03-14  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/druid-loan.c (ld_get_loan_range): Fix precedence bug
	screwing up loan review page.

2004-03-14  Joshua Sled  <jsled@asynchronous.org>

	* src/register/register-core/formulacell.c
	(gnc_formula_cell_modify_verify): Add ':' to the token list of
	allowable characters in the formula cell. Fixes Bug#106260.

2004-03-14  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/druid-loan.c (gnc_ui_sx_loan_druid_create): Use the
	account-list filtering capability of the GncAccountSel to only
	show/allow-creation-of valid account-types in the
	loan-druid. Fixes Bug#124595.

2004-03-13  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-scheduledxaction.c (gnc_sxed_check_consistent):
	Bug#133709 fix: when we have a problem parsing a credit/debit
	cell, indicate to the user what occurred.

2004-03-08  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c, dialog-hbcitrans.h,